fix(sidebar): fix overflow issue on safari
UD-155

--- a/src/app/components/layout/sidebar/sidebar.sass
+++ b/src/app/components/layout/sidebar/sidebar.sass
@@ -20,7 +20,6 @@ $link-hover-background: $uni-color-toolbar
     padding: 0
     background: $sidebar-background
     color: $uni-color-negative
-    overflow: hidden
     font-family: 'Roboto', sans-serif
 
     z-index: #{map-get($zindex, 'toolbar') + 1}
